--- a/Calastone.DeveloperChallenge/Calastone.DeveloperChallenge.csproj
+++ b/Calastone.DeveloperChallenge/Calastone.DeveloperChallenge.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Calastone.ApplicationCore\Calastone.ApplicationCore.csproj" />
+    <ProjectReference Include="..\Calastrone.Infra\Calastrone.Infra.csproj" />
+  </ItemGroup>
+
 </Project>
